--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "public/**",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "api/**/*.js",
+      "src": "api/*.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "src": "/api/send-order",
+      "dest": "/api/send-order.js"
+    },
+    {
+      "src": "/api/get-updates",
+      "dest": "/api/get-updates.js"
+    },
+    {
+      "src": "/api/send-receipt",
+      "dest": "/api/send-receipt.js"
     },
     {
       "src": "/(.*)",
