--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "src": "api/*.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -18,6 +22,10 @@
     {
       "src": "/api/send-receipt",
       "dest": "/api/send-receipt.js"
+    },
+    {
+      "src": "^/$",
+      "dest": "/public/index.html"
     },
     {
       "src": "/(.*)",
